--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_gps">GPS</string>
     <string name="menu_credits">Creditos</string>
     <string name="menu_exit">Salir</string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
